--- a/servicelog.api/requirements.txt
+++ b/servicelog.api/requirements.txt
@@ -5,7 +5,9 @@ certifi==2024.12.14
 charset-normalizer==3.4.0
 click==8.1.7
 colorama==0.4.6
+dnspython==2.7.0
 docopt==0.6.2
+email_validator==2.2.0
 fastapi==0.115.6
 h11==0.14.0
 idna==3.10
